# KGAI

./: .env  README.md  add_data.py  graph.json  index.html  init_db.py  knowledge_graph.json  knowledge_graph_manager.py  main.py  pyproject.toml  test.ipynb  update.py
Documents/PML1/02_probability_univariate_models/: 00020_probability.md  00021_types_of_uncertainty.md  00022_probability_as_an_extension_of_logic.md  00023_random_variables.md  00024_discrete_random_variables.md  00025_continuous_random_variables.md  00026_sets_of_related_random_variables.md  00027_independence_and_conditional_independence.md  00028_moments_of_a_distribution.md  00029_limitations_of_summary_statistics.md  00030_bayes_rule.md  00031_inverse_problems.md  00032_bernoulli_and_binomial_distributions.md  00033_sigmoid_function.md  00034_binary_logistic_regression.md  00035_categorical_and_multinomial_distributions.md  00036_softmax_function.md  00037_multiclass_logistic_regression.md  00038_log_sum_exp_trick.md  00039_univariate_gaussian_distribution.md  00040_cumulative_distribution_function.md  00041_probability_density_function.md  00042_regression_for_gaussian.md  00043_why_is_the_gaussian_distribution_so_widely_used.md  00044_dirac_delta_function_as_a_limiting_case.md  00045_student_t_distribution.md  00046_cauchy_distribution.md  00047_laplace_distribution.md  (+11 more)
database/: mongo_db.py  neo4j_db.py
docs/: Machine Learning.md  artificial_intelligence.md  keyword1.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
markdown_docs/: 머신러닝.md
tests/: test_main.py
(+182 files in other folders)
